# eveGNN

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  pyproject.toml  submit_bd.sh
Bash/: 7867790.sh  7867791.sh  7876227.sh  7876228.sh  7876229.sh  7919414.sh  ADAM.sh  eve_pars_est_free_data.sh  run_bd_ddd_data.sh  run_ddd_data.sh  run_ddd_eve_bd_data.sh  run_ddd_eve_bd_model_training.sh  run_ddd_pars_est_data.sh  run_ddd_pars_est_model_training.sh  run_edd_model_training.sh  run_eve_data.sh  run_eve_pars_est_data.sh  run_eve_pars_est_model_training_diffpool_reg.sh  run_eve_phi_data.sh  run_export_eve.sh  run_missing.sh  run_qualitative_sim.sh  run_quantitative_sim.sh  split_data.sh  submit_bd.sh  submit_bd_pars_est_free_data.sh  submit_bd_pars_est_free_data_rebalanced.sh  submit_bd_pars_est_model_training_diffpool.sh  submit_bd_pars_est_model_training_diffpool_full.sh  submit_bd_pars_est_val_diffpool.sh  submit_bd_poly_data.sh  submit_bd_poly_val_diffpool.sh  submit_ddd.sh  submit_ddd_emp_mle.sh  submit_ddd_emp_mle_uncertainty.sh  submit_ddd_emp_mle_uncertainty_worker.sh  submit_ddd_eve_bd_model_training.sh  submit_ddd_gnn_bootstrap.sh  submit_ddd_ott_mle.sh  submit_ddd_pars_est_cap_data.sh  (+43 more)
Config/: bd_sim.yaml  bd_train_diffpool.yaml  bd_val_diffpool.yaml  ddd_opt_diffpool.yaml  ddd_sim.yaml  ddd_train_diffpool.yaml  ddd_val_diffpool.yaml  eve_sim.yaml  eve_train_diffpool.yaml  eve_val_diffpool.yaml  pbd_sim.yaml  pbd_train_diffpool.yaml  pbd_val_diffpool.yaml
R/: correction.R  data_export.R  data_import.R  dd_ml.R  dd_sim.R  (+6 more)
(+78 files in other folders)
