[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eveGNN"
version = "0.0.1"
authors = [
    { name="Tianjian Qin", email="t.qin@rug.nl" },
]
description = "Graph Neural Network for Evolution"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/EvoLandEco/eveGNN"
"Bug Tracker" = "https://github.com/EvoLandEco/eveGNN/issues"